--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
                     <i class="fa-solid fa-xmark" onclick="displayMenu()"></i>
                 </div>
                 <ul class="header-center_list">
-                    <li class="header-center_item"><a href="#home" class="header-center_link">Home</a></li>
-                    <li class="header-center_item"><a href="#services" class="header-center_link">Services</a></li>
-                    <li class="header-center_item"><a href="#process" class="header-center_link">Process</a></li>
-                    <li class="header-center_item"><a href="#about" class="header-center_link">About</a></li>
-                    <li class="header-center_item"><a href="#contact" class="header-center_link">Testimonials</a></li>
-                    <li class="header-center_item"><a href="#footer" class="header-center_link">Contact</a></li>
+                    <li onclick="displayMenu()" class="header-center_item"><a href="#home" class="header-center_link">Home</a></li>
+                    <li onclick="displayMenu()" class="header-center_item"><a href="#services" class="header-center_link">Services</a></li>
+                    <li onclick="displayMenu()" class="header-center_item"><a href="#process" class="header-center_link">Process</a></li>
+                    <li onclick="displayMenu()" class="header-center_item"><a href="#about" class="header-center_link">About</a></li>
+                    <li onclick="displayMenu()" class="header-center_item"><a href="#contact" class="header-center_link">Testimonials</a></li>
+                    <li onclick="displayMenu()" class="header-center_item"><a href="#footer" class="header-center_link">Contact</a></li>
                 </ul>
                 <div class="header_about">
                     <p>kjadslf;jlkdsa</p>
