--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/reponsive.css">
 </head>
-<body>
 <div class="app ">
-    <div id="#" class="header-wraprer" >
+    <div id="# header" class="header-wraprer">
         <div class="header">
             <div class="header-left">
                 <a href="#" class="header-left_link"><img src="img/logo@2x.png" alt=""></a>
@@ -22,17 +21,34 @@
                     <i class="fa-solid fa-xmark" onclick="displayMenu()"></i>
                 </div>
                 <ul class="header-center_list">
-                    <li onclick="displayMenuTB()" class="header-center_item"><a href="#home" class="header-center_link">Home</a></li>
-                    <li onclick="displayMenuTB()" class="header-center_item"><a href="#services" class="header-center_link">Services</a></li>
-                    <li onclick="displayMenuTB()" class="header-center_item"><a href="#process" class="header-center_link">Process</a></li>
-                    <li onclick="displayMenuTB()" class="header-center_item"><a href="#about" class="header-center_link">About</a></li>
-                    <li onclick="displayMenuTB()" class="header-center_item"><a href="#contact" class="header-center_link">Testimonials</a></li>
-                    <li onclick="displayMenuTB()" class="header-center_item"><a href="#footer" class="header-center_link">Contact</a></li>
+                    <li onclick="displayMenuTB()" class="header-center_item"><a href="#home"
+                                                                                class="header-center_link">Home</a>
+                    </li>
+                    <li onclick="displayMenuTB()" class="header-center_item"><a href="#services"
+                                                                                class="header-center_link">Services</a>
+                    </li>
+                    <li onclick="displayMenuTB()" class="header-center_item"><a href="#process"
+                                                                                class="header-center_link">Process</a>
+                    </li>
+                    <li onclick="displayMenuTB()" class="header-center_item"><a href="#about"
+                                                                                class="header-center_link">About</a>
+                    </li>
+                    <li onclick="displayMenuTB()" class="header-center_item"><a href="#contact"
+                                                                                class="header-center_link">Testimonials</a>
+                    </li>
+                    <li onclick="displayMenuTB()" class="header-center_item"><a href="#footer"
+                                                                                class="header-center_link">Contact</a>
+                    </li>
                 </ul>
                 <div class="header_about">
-                    <p>kjadslf;jlkdsa</p>
-                    <p>kjadslf;jlkdsa</p>
-                    <p>kjadslf;jlkdsa</p>
+                    <p><a href="">sandbox@gmai.com</a></p>
+                    <p>0123456789</p>
+                    <p class="header_about-icon">
+                        <a href=""><i class="fa-brands fa-instagram"></i></a>
+                        <a href=""><i class="fa-brands fa-tiktok"></i></a>
+                        <a href=""><i class="fa-brands fa-youtube"></i></a>
+                        <a href=""><i class="fa-brands fa-twitter"></i></a></p>
+                    
                 </div>
             </div>
             <div class="header-right">
@@ -73,7 +89,8 @@
                 <div class="services-top_left">
                     <h3>The full service we are offering is specifically designed to meet your business needs and
                         projects.</h3>
-                    <p>Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Morbi leo risus, porta ac
+                    <p>Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Morbi leo risus, porta
+                        ac
                         consectetur ac, vestibulum at eros. Praesent commodo cursus magna, vel scelerisque nisl
                         consectetur
                         duis
@@ -122,35 +139,39 @@
                 <div class="services-bottom-item services-bottom-item-left">
                     <img src="img/download (2).png" alt="">
                     <h4>Marketing</h4>
-                    <p>Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus. Cras
+                    <p>Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus.
+                        Cras
                         justo
                         cum sociis natoque magnis.</p>
                 </div>
                 <div class="services-bottom-item services-bottom-item-right">
                     <img src="img/images (1).png" alt="">
                     <h4>Strategy</h4>
-                    <p>Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus. Cras
+                    <p>Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus.
+                        Cras
                         justo
                         cum sociis natoque magnis.</p>
                 </div>
                 <div class="services-bottom-item services-bottom-item-left">
                     <img src="img/download (1).png" alt="">
                     <h4>Development</h4>
-                    <p>Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus. Cras
+                    <p>Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus.
+                        Cras
                         justo
                         cum sociis natoque magnis.</p>
                 </div>
                 <div class="services-bottom-item services-bottom-item-right">
                     <img src="img/images.png" alt="">
                     <h4>Data Analysis</h4>
-                    <p>Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus. Cras
+                    <p>Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus.
+                        Cras
                         justo
                         cum sociis natoque magnis.</p>
                 </div>
             </div>
         </div>
     </div>
-    <div id ="process" class="color-wraper">
+    <div id="process" class="color-wraper">
         <div class="width-reponsive process">
             <div class="process-top  ">
                 <div class="process-top-left">
@@ -192,23 +213,29 @@
                         <p class="process-bottom-left-content hien hien1">1Fusce dapibus, tellus ac cursus commodo,
                             tortor
                             mauris
-                            condimentum nibh, ut fermentum massa justo sit amet risus. Cras mattis consectetur purus sit
+                            condimentum nibh, ut fermentum massa justo sit amet risus. Cras mattis consectetur purus
+                            sit
                             amet
                             fermentum. Praesent commodo cursus magna, vel.</p>
                     </div>
                     <div class="process-bottom-left-item">
                         <p class="process-bottom-left-title" onclick="hien1()"> Top-Notch Support </p>
-                        <p class="process-bottom-left-content hien2">2Fusce dapibus, tellus ac cursus commodo, tortor
+                        <p class="process-bottom-left-content hien2">2Fusce dapibus, tellus ac cursus commodo,
+                            tortor
                             mauris
-                            condimentum nibh, ut fermentum massa justo sit amet risus. Cras mattis consectetur purus sit
+                            condimentum nibh, ut fermentum massa justo sit amet risus. Cras mattis consectetur purus
+                            sit
                             amet
                             fermentum. Praesent commodo cursus magna, vel.</p>
                     </div>
                     <div class="process-bottom-left-item">
-                        <p id="demo" class="process-bottom-left-title" onclick="hien2()"> Header and Slider Options </p>
-                        <p class="process-bottom-left-content hien3">3Fusce dapibus, tellus ac cursus commodo, tortor
+                        <p id="demo" class="process-bottom-left-title" onclick="hien2()"> Header and Slider
+                            Options </p>
+                        <p class="process-bottom-left-content hien3">3Fusce dapibus, tellus ac cursus commodo,
+                            tortor
                             mauris
-                            condimentum nibh, ut fermentum massa justo sit amet risus. Cras mattis consectetur purus sit
+                            condimentum nibh, ut fermentum massa justo sit amet risus. Cras mattis consectetur purus
+                            sit
                             amet
                             fermentum. Praesent commodo cursus magna, vel.</p>
                     </div>
@@ -450,6 +477,7 @@
     </div>
 
 </div>
+
 </body>
 <script src="https://kit.fontawesome.com/bc62e0aea6.js" crossorigin="anonymous"></script>
 <script type="text/javascript" src="bootstrap-4.5.3-dist/js/bootstrap.js"></script>
