--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sandbox</title>
+    <link rel="icon" href="img/i5.png" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="bootstrap-4.5.3-dist/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/reponsive.css">
@@ -48,7 +49,7 @@
                         <a href=""><i class="fa-brands fa-tiktok"></i></a>
                         <a href=""><i class="fa-brands fa-youtube"></i></a>
                         <a href=""><i class="fa-brands fa-twitter"></i></a></p>
-                    
+
                 </div>
             </div>
             <div class="header-right">
@@ -372,9 +373,9 @@
                         </div>
                     </div>
                     <div class="form-list-dot">
-                        <p onclick="currentSlidetestimonials(0)" class="dottestimonials"></p>
-                        <p onclick="currentSlidetestimonials(1)" class="dottestimonials"></p>
-                        <p onclick="currentSlidetestimonials(2)" class="dottestimonials"></p>
+                        <p class="dottestimonials"></p>
+                        <p class="dottestimonials"></p>
+                        <p class="dottestimonials"></p>
                     </div>
                 </div>
                 <div class="testimonials-left-img">
@@ -477,7 +478,9 @@
     </div>
 
 </div>
-
+<div id="scroll-top">
+    <span  id="scroll-top-child"><i class="fa-solid fa-arrow-up"></i></span>
+</div>
 </body>
 <script src="https://kit.fontawesome.com/bc62e0aea6.js" crossorigin="anonymous"></script>
 <script type="text/javascript" src="bootstrap-4.5.3-dist/js/bootstrap.js"></script>
