--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/reponsive.css">
 </head>
+<body>
 <div class="app ">
     <div id="# header" class="header-wraprer">
         <div class="header">
@@ -34,10 +35,10 @@
                     <li onclick="displayMenuTB()" class="header-center_item"><a href="#about"
                                                                                 class="header-center_link">About</a>
                     </li>
-                    <li onclick="displayMenuTB()" class="header-center_item"><a href="#contact"
+                    <li onclick="displayMenuTB()" class="header-center_item"><a href="#testimonials"
                                                                                 class="header-center_link">Testimonials</a>
                     </li>
-                    <li onclick="displayMenuTB()" class="header-center_item"><a href="#footer"
+                    <li onclick="displayMenuTB()" class="header-center_item"><a href="#contact"
                                                                                 class="header-center_link">Contact</a>
                     </li>
                 </ul>
@@ -101,7 +102,7 @@
                     <div class="services-top_right-item">
                         <div class="services-top_right-text">
                             <p>Marketing</p>
-                            <p>100%</p>
+                            <p class="percentage-container">0%</p>
                         </div>
                         <div class="services-top_right-chart">
                             <div class="divservices-top_right-chartchild"></div>
@@ -109,8 +110,8 @@
                     </div>
                     <div class="services-top_right-item">
                         <div class="services-top_right-text">
-                            <p>Marketing</p>
-                            <p>100%</p>
+                            <p>Strategy</p>
+                            <p class="percentage-container">0%</p>
                         </div>
                         <div class="services-top_right-chart">
                             <div class="divservices-top_right-chartchild"></div>
@@ -118,8 +119,8 @@
                     </div>
                     <div class="services-top_right-item">
                         <div class="services-top_right-text">
-                            <p>Marketing</p>
-                            <p>100%</p>
+                            <p>Development</p>
+                            <p class="percentage-container">0%</p>
                         </div>
                         <div class="services-top_right-chart">
                             <div class="divservices-top_right-chartchild"></div>
@@ -127,8 +128,8 @@
                     </div>
                     <div class="services-top_right-item">
                         <div class="services-top_right-text">
-                            <p>Marketing</p>
-                            <p>100%</p>
+                            <p>Data Analysis</p>
+                            <p class="percentage-container">0%</p>
                         </div>
                         <div class="services-top_right-chart">
                             <div class="divservices-top_right-chartchild"></div>
@@ -479,8 +480,10 @@
 
 </div>
 <div id="scroll-top">
-    <span  id="scroll-top-child"><i class="fa-solid fa-arrow-up"></i></span>
+    <span id="scroll-top-child"><i class="fa-solid fa-arrow-up"></i></span>
 </div>
+
+
 </body>
 <script src="https://kit.fontawesome.com/bc62e0aea6.js" crossorigin="anonymous"></script>
 <script type="text/javascript" src="bootstrap-4.5.3-dist/js/bootstrap.js"></script>
